--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,12 +17,25 @@
     font-family: "Poppins", sans-serif;
   }
 </style>
+<script>
+  tailwind.config = {
+    theme: {
+      extend: {
+        colors: {
+          clifford: '#da373d',
+          'bike-primary': '#E76F51',
+          'bike-bg': '#E76F511A',
+        }
+      }
+    }
+  }
+</script>
 </head>
 <body class="font-poppins">
-   <header>
+   <header class="md:container mx-auto">
     <nav>
       <div class="navbar bg-base-100">
-        <div class="navbar-start">
+        <div class="flex-1">
           <div class="dropdown">
             <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
               <svg
@@ -47,7 +60,7 @@
               <li><a>Contact</a></li>
             </ul>
           </div>
-          <a class="btn btn-ghost text-xl">Biker Zone</a>
+          <a class="font-bold text-xl">Biker Zone</a>
         </div>
         <div class="navbar-center hidden lg:flex">
           <ul class="menu menu-horizontal px-1">
@@ -57,14 +70,81 @@
             <li><a>Contact</a></li>
           </ul>
         </div>
-        <div class="navbar-end">
-          <a class="btn">Login</a>
+        <div class="">
+          <a class="btn bg-bike-primary">Login</a>
         </div>
       </div>
     </nav>
+    <!-- slider/carousel  -->
+    <div class="carousel w-full bg-bike-bg">
+      <!-- slide 1 -->
+      <div id="slide1" class="carousel-item relative w-full lg:h-[554px]">
+        <div class="flex flex-col lg:flex-row p-12 lg:p-24">
+          <!-- text  -->
+           <div class="space-y-7 flex-1">
+            <h2 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
+            <p>Amet minim mollit non deserunt ullamco <br>
+              est sit aliqua dolor do amet sint. Velit officia consequat <br> duis enim velit mollit.</p>
+              <button class="btn bg-bike-primary text-white">Purchase</button>
+           </div>
+           <!-- image -->
+            <div class="flex-1">
+              <img
+          src="./biker-zone-resources-main/images/slider/bike1.png" class="w-[400px]" />
+            </div>
+        </div>
+        <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+          <a href="#slide4" class="btn btn-circle">❮</a>
+          <a href="#slide2" class="btn btn-circle">❯</a>
+        </div>
+      </div>
+      <!-- slide 2 -->
+      <div id="slide2" class="carousel-item relative w-full lg:h-[554px]">
+        <div class="flex flex-col lg:flex-row p-12 lg:p-24">
+          <!-- text  -->
+           <div class="space-y-7 flex-1">
+            <h2 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
+            <p>Amet minim mollit non deserunt ullamco <br>
+              est sit aliqua dolor do amet sint. Velit officia consequat <br> duis enim velit mollit.</p>
+              <button class="btn bg-bike-primary text-white">Purchase</button>
+           </div>
+           <!-- image -->
+            <div class="flex-1">
+              <img
+          src="./biker-zone-resources-main/images/slider/bike2.png" class="w-[400px]" />
+            </div>
+        </div>
+        <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+          <a href="#slide1" class="btn btn-circle">❮</a>
+          <a href="#slide3" class="btn btn-circle">❯</a>
+        </div>
+      </div>
+      <!-- slide 3 -->
+      <div id="slide3" class="carousel-item relative w-full lg:h-[554px]">
+        <div class="flex flex-col lg:flex-row p-12 lg:p-24">
+          <!-- text  -->
+           <div class="space-y-7 flex-1">
+            <h2 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
+            <p>Amet minim mollit non deserunt ullamco <br>
+              est sit aliqua dolor do amet sint. Velit officia consequat <br> duis enim velit mollit.</p>
+              <button class="btn bg-bike-primary text-white">Purchase</button>
+           </div>
+           <!-- image -->
+            <div class="flex-1">
+              <img
+          src="./biker-zone-resources-main/images/slider/bike3.png" class="w-[400px]" />
+            </div>
+        </div>
+        <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+          <a href="#slide2" class="btn btn-circle">❮</a>
+          <a href="#slide1" class="btn btn-circle">❯</a>
+        </div>
+      </div>
+
+    </div>
    </header>
 
-    <main></main>
+    <main class="md:container mx-auto"></main>
 
     <footer></footer>
 </body>
