--- a/index.html
+++ b/index.html
@@ -1,59 +1,53 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>bike website using Daisy UI</title>
-    <!-- daisyUI CSS file + Tailwind CSS CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
-    <!-- fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-<script src="https://cdn.tailwindcss.com">
-</script>
-<style>
-  .font-poppins{
-    font-family: "Poppins", sans-serif;
-  }
-</style>
-<script>
-  tailwind.config = {
-    theme: {
-      extend: {
-        colors: {
-          clifford: '#da373d',
-          'bike-primary': '#E76F51',
-          'bike-bg': '#E76F511A',
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>bike website using Daisy UI</title>
+  <!-- daisyUI CSS file + Tailwind CSS CDN -->
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
+  <!-- fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com">
+  </script>
+  <style>
+    .font-poppins {
+      font-family: "Poppins", sans-serif;
+    }
+  </style>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            clifford: '#da373d',
+            'bike-primary': '#E76F51',
+            'bike-bg': '#E76F511A',
+          }
         }
       }
     }
-  }
-</script>
+  </script>
 </head>
+
 <body class="font-poppins">
-   <header class="md:container mx-auto">
+  <header class="md:container mx-auto">
     <nav>
       <div class="navbar bg-base-100">
         <div class="flex-1">
           <div class="dropdown">
             <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                class="h-5 w-5"
-                fill="none"
-                viewBox="0 0 24 24"
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
                 stroke="currentColor">
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M4 6h16M4 12h8m-8 6h16" />
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
               </svg>
             </div>
-            <ul
-              tabindex="0"
-              class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+            <ul tabindex="0" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
               <li><a> Home</a></li>
               <li><a>Shop</a></li>
               <li><a>News</a></li>
@@ -81,17 +75,16 @@
       <div id="slide1" class="carousel-item relative w-full lg:h-[554px]">
         <div class="flex flex-col lg:flex-row p-12 lg:p-24">
           <!-- text  -->
-           <div class="space-y-7 flex-1">
+          <div class="space-y-7 flex-1">
             <h2 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
             <p>Amet minim mollit non deserunt ullamco <br>
               est sit aliqua dolor do amet sint. Velit officia consequat <br> duis enim velit mollit.</p>
-              <button class="btn bg-bike-primary text-white">Purchase</button>
-           </div>
-           <!-- image -->
-            <div class="flex-1">
-              <img
-          src="./biker-zone-resources-main/images/slider/bike1.png" class="w-[400px]" />
-            </div>
+            <button class="btn bg-bike-primary text-white">Purchase</button>
+          </div>
+          <!-- image -->
+          <div class="flex-1">
+            <img src="./biker-zone-resources-main/images/slider/bike1.png" class="w-[400px]" />
+          </div>
         </div>
         <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
           <a href="#slide4" class="btn btn-circle">❮</a>
@@ -102,17 +95,16 @@
       <div id="slide2" class="carousel-item relative w-full lg:h-[554px]">
         <div class="flex flex-col lg:flex-row p-12 lg:p-24">
           <!-- text  -->
-           <div class="space-y-7 flex-1">
+          <div class="space-y-7 flex-1">
             <h2 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
             <p>Amet minim mollit non deserunt ullamco <br>
               est sit aliqua dolor do amet sint. Velit officia consequat <br> duis enim velit mollit.</p>
-              <button class="btn bg-bike-primary text-white">Purchase</button>
-           </div>
-           <!-- image -->
-            <div class="flex-1">
-              <img
-          src="./biker-zone-resources-main/images/slider/bike2.png" class="w-[400px]" />
-            </div>
+            <button class="btn bg-bike-primary text-white">Purchase</button>
+          </div>
+          <!-- image -->
+          <div class="flex-1">
+            <img src="./biker-zone-resources-main/images/slider/bike2.png" class="w-[400px]" />
+          </div>
         </div>
         <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
           <a href="#slide1" class="btn btn-circle">❮</a>
@@ -123,17 +115,16 @@
       <div id="slide3" class="carousel-item relative w-full lg:h-[554px]">
         <div class="flex flex-col lg:flex-row p-12 lg:p-24">
           <!-- text  -->
-           <div class="space-y-7 flex-1">
+          <div class="space-y-7 flex-1">
             <h2 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
             <p>Amet minim mollit non deserunt ullamco <br>
               est sit aliqua dolor do amet sint. Velit officia consequat <br> duis enim velit mollit.</p>
-              <button class="btn bg-bike-primary text-white">Purchase</button>
-           </div>
-           <!-- image -->
-            <div class="flex-1">
-              <img
-          src="./biker-zone-resources-main/images/slider/bike3.png" class="w-[400px]" />
-            </div>
+            <button class="btn bg-bike-primary text-white">Purchase</button>
+          </div>
+          <!-- image -->
+          <div class="flex-1">
+            <img src="./biker-zone-resources-main/images/slider/bike3.png" class="w-[400px]" />
+          </div>
         </div>
         <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
           <a href="#slide2" class="btn btn-circle">❮</a>
@@ -142,71 +133,133 @@
       </div>
 
     </div>
-   </header>
+  </header>
 
-    <main class="md:container mx-auto">
-      <!-- featured bike  -->
-       <section></section>
+  <main class="md:container mx-auto">
+    <!-- featured bike  -->
+    <section></section>
 
-       <!-- latest bike -->
-        <section class="my-24">
-          <h2 class="text-5xl font-bold text-center mb-12">latest Bike</h2>
-          <!-- cards -->
-           <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12">
-            <!-- card 1 -->
-            <div class="card bg-base-100 shadow-xl">
-              <figure>
-                <img
-                  src="./biker-zone-resources-main/images/others/latest1.png"
-                   />
-              </figure>
-              <div class="card-body space-y-5">
-                <h2 class="card-title">Ducati XDIAVEL S-73!</h2>
-               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
-                <div class="card-actions">
-                  <button class="btn bg-bike-primary text-white">Read More</button>
+    <!-- latest bike -->
+    <section class="my-24">
+      <h2 class="text-5xl font-bold text-center mb-12">latest Bike</h2>
+      <!-- cards -->
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12">
+        <!-- card 1 -->
+        <div class="card bg-base-100 shadow-xl">
+          <figure>
+            <img src="./biker-zone-resources-main/images/others/latest1.png" />
+          </figure>
+          <div class="card-body space-y-5">
+            <h2 class="card-title">Ducati XDIAVEL S-73!</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+              lectus at.</p>
+            <div class="card-actions">
+              <button class="btn bg-bike-primary text-white">Read More</button>
+            </div>
+          </div>
+        </div>
+        <!-- card 2 -->
+        <div class="card bg-base-100 shadow-xl">
+          <figure>
+            <img src="./biker-zone-resources-main/images/others/latest2.png" />
+          </figure>
+          <div class="card-body space-y-5">
+            <h2 class="card-title">Ducati XDIAVEL S-73!</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+              lectus at.</p>
+            <div class="card-actions">
+              <button class="btn bg-bike-primary text-white">Read More</button>
+            </div>
+          </div>
+        </div>
+        <!-- card 3 -->
+        <div class="card bg-base-100 shadow-xl">
+          <figure>
+            <img src="./biker-zone-resources-main/images/others/latest3.png" />
+          </figure>
+          <div class="card-body space-y-5">
+            <h2 class="card-title">Ducati XDIAVEL S-73!</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi
+              lectus at.</p>
+            <div class="card-actions">
+              <button class="btn bg-bike-primary text-white">Read More</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Review section -->
+      <section></section>
+
+      <!-- FAQ -->
+      <section class="my-24">
+        <h2 class="text-5xl font-bold text-center mb-12">Frequently Asked <span
+            class="text-bike-primary">Questions</span></h2>
+        <!-- hero -->
+        <div class="hero">
+          <div class="hero-content flex-col lg:flex-row">
+            <img src="./biker-zone-resources-main/images/others/faq.png"
+              class="w-full rounded-lg shadow-2xl" />
+            <!-- acordion -->
+             <div class="space-y-5">
+              <div class="collapse collapse-arrow border border-blue-100 ">
+                <input type="radio" name="my-accordion-2" checked="checked" />
+                <div class="collapse-title text-xl font-medium">What are the most important things I should
+                  know about riding a bike?</div>
+                <div class="collapse-content">
+                  <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
                 </div>
               </div>
-            </div>
-            <!-- card 2 -->
-            <div class="card bg-base-100 shadow-xl">
-              <figure>
-                <img
-                  src="./biker-zone-resources-main/images/others/latest2.png"
-                   />
-              </figure>
-              <div class="card-body space-y-5">
-                <h2 class="card-title">Ducati XDIAVEL S-73!</h2>
-               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
-                <div class="card-actions">
-                  <button class="btn bg-bike-primary text-white">Read More</button>
+              <div class="collapse collapse-arrow border border-blue-100 ">
+                <input type="radio" name="my-accordion-2" />
+                <div class="collapse-title text-xl font-medium">Click to open this one for things I should
+                  know</div>
+                <div class="collapse-content">
+                  <p>Always obey the rules of the road. Obey all traffic signals, signs, and laws.  Get in the mindset of “driving” your bike—not just “riding” your bike. </p>
                 </div>
               </div>
-            </div>
-            <!-- card 3 -->
-            <div class="card bg-base-100 shadow-xl">
-              <figure>
-                <img
-                  src="./biker-zone-resources-main/images/others/latest3.png"
-                   />
-              </figure>
-              <div class="card-body space-y-5">
-                <h2 class="card-title">Ducati XDIAVEL S-73!</h2>
-               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
-                <div class="card-actions">
-                  <button class="btn bg-bike-primary text-white">Read More</button>
+              <div class="collapse collapse-arrow border border-blue-100 ">
+                <input type="radio" name="my-accordion-2" />
+                <div class="collapse-title text-xl font-medium">What are the things about riding a bike?</div>
+                <div class="collapse-content">
+                  <p> This will help you be a more focused and legally compliant bike rider.</p>
                 </div>
               </div>
-            </div>
-           </div>
+              <div class="collapse collapse-arrow border border-blue-100 ">
+                <input type="radio" name="my-accordion-2" />
+                <div class="collapse-title text-xl font-medium">What are the things about riding a bike?</div>
+                <div class="collapse-content">
+                  <p> This will help you be a more focused and legally compliant bike rider.</p>
+                </div>
+              </div>
+             </div>
+          </div>
+        </div>
+      </section>
+    </section>
+  </main>
 
-           <!-- Review section -->
-            <section></section>
-
-            <!-- FAQ -->
-        </section>
-    </main>
-
-    <footer></footer>
+  <footer class="footer bg-black text-neutral-content p-10">
+    <aside>
+      <p>
+        ACME Industries Ltd.
+        <br />
+        Providing reliable tech since 1992
+      </p>
+    </aside>
+    <nav>
+      <h6 class="footer-title">Get the app</h6>
+      <div class="grid grid-cols-1 gap-4">
+        <!-- icons -->
+        <a>
+          <img class="w-36" src="./biker-zone-resources-main/images/others/android.png" alt="">
+        </a>
+        <a>
+          <img class="w-36" src="./biker-zone-resources-main/images/others/ios.png" alt="">
+        </a>
+      </div>
+    </nav>
+  </footer>
 </body>
+
 </html>
